Fix overlap and reduce Hero section height

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -703,6 +703,7 @@ img {
     position: relative;
     width: 100%;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 .projects-bg {
     position: relative;
@@ -1015,8 +1016,8 @@ img {
 .hero-new {
     position: relative;
     width: 100%;
-    height: 100vh;
-    min-height: 700px;
+    height: 65vh;
+    min-height: 500px;
     display: flex;
     align-items: center;
     background-color: #f4f6f9; /* Fallback */
